--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ ehthumbs.db
 
 # Folder config file
 Desktop.ini
+.vscode
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
@@ -26,7 +27,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
